targetsdir = $(datadir)/gnome-color-manager/targets
targets_DATA =					\
	unknown.png				\
	ColorCheckerDC.png			\
	ColorCheckerSG.png			\
	ColorChecker24.png			\
	CMP-DigitalTarget3.png			\
	QPcard_201.png				\
	LaserSoftDCPro.png			\
	i1_RGB_Scan_14.png			\
	CMP_DT_003.png				\
	QPcard_202.png				\
	IT872.png

EXTRA_DIST =					\
	$(targets_DATA)

-include $(top_srcdir)/git.mk
