install_data([
  'CMP-DigitalTarget3.png',
  'CMP_DT_003.png',
  'ColorChecker24.png',
  'ColorCheckerDC.png',
  'ColorCheckerSG.png',
  'i1_RGB_Scan_14.png',
  'IT872.png',
  'LaserSoftDCPro.png',
  'QPcard_201.png',
  'QPcard_202.png',
  'unknown.png',
  ],
  install_dir : join_paths(prefixed_datadir, 'gnome-color-manager/targets')
)
