TEST_FILES =						\
	test.tif					\
	test.png					\
	test.jpg					\
	test.kdc					\
	cie-widget.png					\
	gamma-widget.png				\
	ibm-t61.icc					\
	image-widget-good.png				\
	image-widget-nonembed.png			\
	image-widget-output.png				\
	image-widget.png				\
	trc-widget.png					\
	Lenovo-T61-Internal.bin				\
	LG-L225W-External.bin

EXTRA_DIST =						\
	$(TEST_FILES)

clean-local:
	rm -f *~

MAINTAINERCLEANFILES =					\
	*~			      			\
	Makefile.in

