TEST_FILES =						\
	test.tif					\
	test.png					\
	test.jpg					\
	test.kdc					\
	cie-widget.png					\
	gamma-widget.png				\
	ibm-t61.icc					\
	bluish-symlink.icc				\
	bluish.icc					\
	image-widget-good.png				\
	image-widget-nonembed.png			\
	image-widget-output.png				\
	image-widget.png				\
	trc-widget.png

EXTRA_DIST =						\
	$(TEST_FILES)

clean-local:
	rm -f *~

MAINTAINERCLEANFILES =					\
	*~			      			\
	Makefile.in

